<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="MediaLibrary">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="Setting">Настройки</string>
    <string name="blacks">Тёмная тема</string>
    <string name="SHARE">Поделиться приложением</string>
    <string name="todo">TODO</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="todo3">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo1">TODO</string>
    <string name="GreetingMessage">Привет, Android разработка — это круто!</string>
    <string name="todo4">TODO</string>
    <string name="todoo">TODO</string>
    <string name="input_hint">Поиск</string>
    <string name="search1">Поиск</string>
    <string name="todo22">TODO</string>
    <string name="todo21">TODO</string>
    <string name="myMail">YAmilanisaev@yandex.ru</string>
    <string name="mailText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="mailSubject">Спасибо разработчикам и разработчицам приложения Playlist Maker!</string>
    <string name="yaAgreementUrl">https://yandex.ru/legal/practicum_offer/</string>
    <string name="yaDeveloperUrl">https://practicum.yandex.ru/android-developer/</string>
    <string name="facebook_application_id">https://www.facebook.com/milan.isaev.5</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="error">Ничего не нашлось </string>
    <string name="placeHolder">Здесь будет текст</string>
    <string name="UpdateButt">Обновить</string>
    <string name="сlearHistory">Очистить историю</string>
    <string name="searchHistory">Вы искали</string>
    <string name="artist_name">artist_name</string>
    <string name="trackname">trackName</string>
    <string name="_00">00:00</string>
    <string name="tracktime">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="_00_00">_00_00</string>
    <string name="uncknownalbum">uncknownalbum</string>
    <string name="uncknownyear">uncknownyear</string>
    <string name="uncknowngenre">uncknowngenre</string>
    <string name="uncknowncountry">uncknowncountry</string>
    <string name="clearHistoryButton">Очистить историю</string>
    <string name="emptyMedia">Ваша медиатека пуста</string>
    <string name="noplaylist">Вы не создали\n ни одного плейлиста</string>
    <string name="newPlaylist">Новый плейлист</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchText">Поиск</string>
    <string name="medialib">Медиатека</string>
    <string name="settingsButton">Настройки</string>
    <string name="picture">Картинка</string>
    <string name="favoritTracks">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
    <string name="name_of_tracklist">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="new_play_list">Новый плейлист</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="no_tracks">В этом плейлисте нет треков</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="warning">Завершить создание плейлиста?</string>
    <string name="all_you_unsaved_data">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="share_playlist">Поделиться</string>
    <string name="confirm">Завершить</string>
    <string name="track_already_added_to_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="confirm_delete_playlist_title">Хотите удалить плейлист "%1$s"?</string>
    <string name="confirm_delete_playlist_negative">Нет</string>
    <string name="confirm_delete_playlist_positive">Да</string>
    <string name="confirm_delete_track_title">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="confirm_delete_track_negative">Удалить</string>
    <string name="confirm_delete_track_positive">Отмена</string>
    <string name="no_tracks_to_share_message">В данном плейлисте нет списка треков, которым можно поделиться.</string>
</resources>