<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.myplaylistmaker.ui.settings.fragments.SettingsFragment" >

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            style="@style/TopText"
            android:text="@string/Setting"
           />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="24dp">

        <TextView
        android:layout_gravity="center_vertical"
        android:text="@string/blacks"
        android:textSize="@dimen/settingTextSize16"
        android:layout_marginStart="@dimen/iconSize16"
        style="@style/SettingsTextStyle" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="6dp"
            app:thumbTint="?attr/thumbColor"
            app:trackTint="?attr/trackColor"
            android:checked="true"
            tools:ignore="TouchTargetSizeCheck" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="0dp"

        style="@style/SettingsFrameStyle">
        <TextView
            style="@style/SettingsTextStyle"
            android:layout_marginStart="@dimen/iconSize16"
            android:text="@string/SHARE"
            />

        <ImageView
            style="@style/SettingsImageStyle"
            android:layout_marginEnd="12dp"
            android:src="@drawable/shareic"
            android:contentDescription="@string/todo1" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/support"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="0dp"
        style="@style/SettingsFrameStyle"
        android:foreground="?attr/selectableItemBackground">
        <TextView
            android:layout_marginStart="@dimen/iconSize16"
            style="@style/SettingsTextStyle"
            android:text="@string/support"
            />

        <ImageView
            style="@style/SettingsImageStyle"
            android:layout_marginEnd="12dp"
            android:src="@drawable/support"
            android:contentDescription="@string/todo2" />
    </FrameLayout>

    <FrameLayout
        style="@style/SettingsFrameStyle"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="0dp"
        android:id="@+id/agreement"
        android:foreground="?attr/selectableItemBackground">
        <TextView
            style="@style/SettingsTextStyle"
            android:layout_marginStart="@dimen/iconSize16"
            android:text="@string/agreement" />

        <ImageView
            style="@style/SettingsImageStyle"
            android:layout_marginEnd="12dp"
            android:src="@drawable/arrowforward"
            android:contentDescription="@string/todo3" />
    </FrameLayout>


</LinearLayout>
