<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/playlistMaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_maker"
        android:textAllCaps="false"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/white1"
        android:textSize="@dimen/textSizePlaylist" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_marginTop="24dp"
        style="@style/ButtonMainStyle"
        android:text="@string/search"
        app:icon="@drawable/vector"
        tools:targetApi="m" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_marginTop="24dp"
        style="@style/ButtonMainStyle"
        android:text="@string/ww"
        app:icon="@drawable/media"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_marginTop="24dp"
        style="@style/ButtonMainStyle"
        android:text="@string/settings"
        app:icon="@drawable/settings"
        />

</LinearLayout>
