<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <ImageView
        android:id="@+id/arrowBack3"
        style="@style/BackArrow"
        android:contentDescription="@string/todo22" />


    <TextView
        style="@style/TopText"
        android:text="@string/search1"/>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="12dp"
        android:background="@drawable/edittext_rounded_corner"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:layout_marginEnd="16dp"
            android:autofillHints="@string/search1"
            android:background="@color/greyLight"
            android:drawableStart="@drawable/search2"
            android:drawablePadding="5dp"
            android:drawableTint="?android:textColorHint"
            android:hint="@string/input_hint"
            android:inputType="text"
            android:maxLength="60"
            android:maxLines="1"
            android:textColor="@color/blackText"
            android:textColorHint="?android:textColorHint"
            android:textSize="@dimen/settingTextSize"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="12dp"
            android:background="@color/greyLight"
            android:contentDescription="@string/todo21"
            android:src="@drawable/clear_icon"
            android:visibility="gone" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTracks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:listitem="@layout/track_item"
        tools:itemCount="1"/>

    <FrameLayout
        android:id="@+id/placeholdLineError"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="110dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:src="@drawable/light_mode"
        android:textSize="16sp" />

    <TextView
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:text="@string/error"
        android:textColor="?attr/colorButtonNormal"
        android:textSize="19sp"
        android:gravity="center"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/placeholdSearchError"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="110dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

     <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:src="@drawable/lightline_error"
         />

      <TextView
          android:layout_width="320dp"
          android:layout_height="88dp"
          android:layout_marginTop="130dp"
          android:layout_gravity="center_horizontal"
          android:textSize="19sp"
          android:textColor="?attr/colorButtonNormal"
          android:text="@string/something_went_wrong"
          android:gravity="center"/>


     <com.google.android.material.button.MaterialButton
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:backgroundTint="?attr/colorButtonNormal"
        android:text="@string/UpdateButt"
        app:cornerRadius="54dp"/>

    </FrameLayout>



</LinearLayout>